--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask>=2.0,<3.0
 flask-cors
 googletrans==4.0.0-rc1
 gTTS
-openai-whisper
-torch
+git+https://github.com/openai/whisper.git
+torch==2.0.1+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
 gunicorn
