fix: use torch==2.5.0 for Render compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ flask-cors
 googletrans==4.0.0-rc1
 gTTS
 git+https://github.com/openai/whisper.git
-torch==2.0.1+cpu
--f https://download.pytorch.org/whl/torch_stable.html
+torch==2.5.0
 gunicorn
